# AWMA

./: .gitignore  CMakeLists.txt  build.sh  scripts.sh
data/: s1.txt
data_generation/: CMakeLists.txt  main.cpp
matlab_visualization/: visualize.asv  visualize.m
openmp/: CMakeLists.txt  definitions.h  main.cpp  parameters.cpp  parameters.h  random.cpp  random.h  timer.h
openmp/implementation/: implementation.cpp  implementation.h
openmp/implementation/ocl/: kernel.cl  updateOcl.cpp  updateOcl.h  utils.h
openmp/implementation/omp/: updateOmpAtomics.h  updateOmpReduction.h
openmp/utils/: parameters.cpp  parameters.h  random.h
source/: definitions.h  main.cpp
source/implementation/: implementation.cpp
source/implementation/ocl/: kernel.cl
source/implementation/omp/: updateOmpAtomics.h  updateOmpReduction.h
source/utils/: parameters.h  random.cpp  random.h
